# crewai-landing-page-generator-exampl

./: pyproject.toml
landing_page_generator/: crew.py
landing_page_generator/config/: agents.yaml
