[tool.poetry]
name = "landing-page-generator"
version = "0.1.0"
description = ""
authors = ["williamkhoo <william_khoo@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = {extras = ["tools"], version = "^0.30.11"}
duckduckgo-search = "^6.1.0"

[tool.poetry.scripts]
landing_page_generator = "landing_page_generator.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
